--- a/lista_tuplas.ipynb
+++ b/lista_tuplas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "source": [
     "#lista\r\n",
     "nomes_paises = ['Brasil', 'Argentina', 'China', 'Canadá', 'Japão']\r\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "source": [
     "print('Tamanho da lista:', len(nomes_paises))"
    ],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "source": [
     "print('País: ', nomes_paises[4])"
    ],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "source": [
     "print('País: ', nomes_paises[-1])"
    ],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "source": [
     "nomes_paises[4] = 'Colômbia'"
    ],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "source": [
     "print(nomes_paises)"
    ],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "source": [
     "print(nomes_paises[1:3])"
    ],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "source": [
     "print(nomes_paises[2:])"
    ],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "source": [
     "print(nomes_paises[:3])"
    ],
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "source": [
     "print(nomes_paises[:])"
    ],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "source": [
     "print(nomes_paises[::2])"
    ],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "source": [
     "print(nomes_paises[::-1])"
    ],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "source": [
     "print('Brasil' in nomes_paises)"
    ],
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "source": [
     "print('Bolivia' not in nomes_paises)"
    ],
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "source": [
     "lista_capitais = []"
    ],
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "source": [
     "lista_capitais.append('Brasília')\r\n",
     "lista_capitais.append('Buenos Aires')\r\n",
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "source": [
     "lista_capitais.insert(2, 'Paris')\r\n",
     "print(lista_capitais)"
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "source": [
     "lista_capitais.remove('Buenos Aires')\r\n",
     "print(lista_capitais)"
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "source": [
     "removido = lista_capitais.pop(2)\r\n",
     "print(lista_capitais, removido)"
@@ -310,7 +310,145 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "['Brasília', 'Paris', 'Bogotá']\n"
+      "['Brasília', 'Paris', 'Bogotá'] Pequim\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "source": [
+    "#tuplas\r\n",
+    "nomes_paises = ('Brasil', 'Argentina', 'China', 'Canadá', 'Japão')\r\n",
+    "print(nomes_paises)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "('Brasil', 'Argentina', 'China', 'Canadá', 'Japão')\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "source": [
+    "nomes_paises = 'Brasil', 'Argentina', 'China', 'Canadá', 'Japão'\r\n",
+    "print(nomes_paises, type(nomes_paises))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "('Brasil', 'Argentina', 'China', 'Canadá', 'Japão') <class 'tuple'>\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "source": [
+    "nome_estado = 'São Paulo',\r\n",
+    "print(nome_estado, type(nome_estado))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "('São Paulo',) <class 'tuple'>\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "source": [
+    "len(nomes_paises)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 24
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "source": [
+    "nomes_paises[0]"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'Brasil'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 25
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "source": [
+    "b, a, c, ca, j = nomes_paises"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "source": [
+    "print(b, c, ca)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Brasil China Canadá\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "source": [
+    "print(*nomes_paises)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Brasil Argentina China Canadá Japão\n"
      ]
     }
    ],
