--- a/Manipulando_arquivos.ipynb
+++ b/Manipulando_arquivos.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Manipulando_arquivos.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPKFjUCq2a9bQ0od1CvUXbM"
+      "authorship_tag": "ABX9TyMs6NEY6cJS39UmOPUz3jd/"
     },
     "kernelspec": {
       "name": "python3",
@@ -311,9 +311,86 @@
         "id": "ODmcdKIBUrxs"
       },
       "source": [
+        "with open('arquivo_texte.txt', 'w', encoding='utf-8') as arquivo:\n",
+        "    arquivo.write('Essa é a primeira linha que eu escrevi usando python\\n')\n",
+        "    arquivo.write('Essa é a segunda linha que eu escrevi usando python\\n')"
+      ],
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ha9XE_f5WSLs",
+        "outputId": "1f5d8a27-6e2d-40c8-c61b-e5328b2728a6"
+      },
+      "source": [
+        "with open('arquivo_texte.txt', 'r', encoding='utf-8') as arquivo:\n",
+        "    print(arquivo.read(), end='')"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Essa é a primeira linha que eu escrevi usando python\n",
+            "Essa é a segunda linha que eu escrevi usando python\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UZIcTLVgWZ50"
+      },
+      "source": [
+        "with open('arquivo_texte.txt', 'a', encoding='utf-8') as arquivo:\n",
+        "    arquivo.write('Essa é a terceira linha que eu escrevi usando python\\n')"
+      ],
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YuOz5I4pWhlJ",
+        "outputId": "0d1ff916-d916-4776-d84d-17d215e97980"
+      },
+      "source": [
+        "with open('arquivo_texte.txt', 'r', encoding='utf-8') as arquivo:\n",
+        "    print(arquivo.read(), end='')"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Essa é a primeira linha que eu escrevi usando python\n",
+            "Essa é a segunda linha que eu escrevi usando python\n",
+            "Essa é a terceira linha que eu escrevi usando python\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jLCSwA0xWjOW"
+      },
+      "source": [
         ""
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     }
   ]
